fixed horizontal overflow

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -6,11 +6,13 @@
 
 html {
 	font-size: 62.5%;
+    overflow-x: hidden;
 }
 
 body {
 	font-size: 1.6rem;
 	background-color: #fdfdfd;
+    overflow-x: hidden;
 }
 
 a {
